--- a/index.html
+++ b/index.html
@@ -6,17 +6,28 @@
 </head>
 <body>
 <link href="js/styles.css" rel="stylesheet">
+<script src="js/clipboard.min.js"></script>
 <script src="js/reelset.js" type="text/javascript"></script>
 <script src="js/init.js" type="text/javascript"></script>
-<div>
+
+<div >
     <p>Result of click</p>
-    <p class="result"></p>
-    <p class="result2"></p>
-    <p class="result3"></p>
-    <p class="result4"></p>
-    <p class="result5"></p>
-    <p class="result6"></p>
+    <div id="copyRes">
+        <p class="result"></p>
+        <p class="result2"></p>
+        <p class="result3"></p>
+        <p class="result4"></p>
+        <p class="result5"></p>
+        <p class="result6"></p>
+    </div>
+    <button class="btn-clipboard" data-clipboard-target="#copyRes">
+        Copy
+    </button>
+    <script>
+        new Clipboard('div+button');
+    </script>
 </div>
+
 <div class="reels">
     <div>
 
@@ -50,7 +61,7 @@
 
         var result = document.getElementsByClassName("result")[0];
         div.onclick = function () {
-            result.innerHTML = this.getAttribute("number");
+            result.innerHTML = this.getAttribute("number")+',';
         }
     }
 
@@ -63,7 +74,7 @@
 
         var result2 = document.getElementsByClassName("result2")[0];
         div1.onclick = function () {
-            result2.innerHTML = this.getAttribute("number");
+            result2.innerHTML = this.getAttribute("number")+',';
         }
     }
     var reel2 = document.getElementsByClassName("reel-2")[0];
@@ -75,7 +86,7 @@
 
         var result3 = document.getElementsByClassName("result3")[0];
         div2.onclick = function () {
-            result3.innerHTML = this.getAttribute("number");
+            result3.innerHTML = this.getAttribute("number")+',';
         }
     }
     var reel3 = document.getElementsByClassName("reel-3")[0];
@@ -87,7 +98,7 @@
 
         var result4 = document.getElementsByClassName("result4")[0];
         div3.onclick = function () {
-            result4.innerHTML = this.getAttribute("number");
+            result4.innerHTML = this.getAttribute("number")+',';
         }
     }
     var reel4 = document.getElementsByClassName("reel-4")[0];
@@ -99,7 +110,7 @@
 
         var result5 = document.getElementsByClassName("result5")[0];
         div4.onclick = function () {
-            result5.innerHTML = this.getAttribute("number");
+            result5.innerHTML = this.getAttribute("number")+',';
         }
     }
     var reel5 = document.getElementsByClassName("reel-5")[0];
@@ -113,6 +124,10 @@
         div5.onclick = function () {
             result6.innerHTML = this.getAttribute("number");
         }
+
+
+
+
     }
 
 
